2018-06-08  Karl Berry  <karl@freefriends.org>

	* common.defines (aopeninwithdirname): add.

2016-04-06  Karl Berry  <karl@tug.org>

	* convert: remove $pascalfile if it is empty,
	along with moving the non-empty .c output, etc.

2015-06-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Integrate MFLua and MFLuaJIT.
	* coerce.h, convert, splitup.c: Adapted.

2015-04-17  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac: Test if isascii is declared.

2015-01-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* common.defines: Remove intcast.

2015-01-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* common.defines: Remove casttobytepointer and pointertobyte.

2014-11-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac: Add AC_CHECK_SIZEOF([long]),
	AC_CHECK_SIZEOF([void *]) and AC_TYPE_UINTPTR_T.

2014-06-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Drop the obsolete ACLOCAL_AMFLAGS.

2014-01-15  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* fixwrites.c: Recognize dumpname as string.

2014-01-09  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Introduce a genuine 64-bit integer type, in case of 32-bit off_t.
	* common.defines (int64cast, integer64): Add these.

2013-12-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* common.defines (makesuffix): Add this.

2013-07-17  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (libweb2c.a): Avoid more 'parallel make' problems.

2013-07-15  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (w2c/config.h): Avoid 'parallel make' problems.

2013-06-28  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* cvtbib.sed: Generate bibtex.c to first #include "cpascal.h".
	* makecpool.c: Generate tex-pool.c to first #include "texd.h".
	* web2c-lexer.l: First #include <w2c/config.h> via "web2c.h".

2013-06-27  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* main.c: Drop variable 'error' (set but not used).

2012-12-17  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Enable silent rules.
