@@ -25,7 +25,7 @@ for those people who are interested.
 --]]
 
 -- Version information
-release_date = "2018-10-30"
+release_date = "2018-11-08"
 
 -- File operations are aided by the LuaFileSystem module
 local lfs = require("lfs")
@@ -154,8 +154,9 @@ if options["target"] == "check" then
       for _,config in ipairs(failed) do
         print("Failed tests for configuration " .. config .. ":")
         print("\n  Check failed with difference files")
+        local testdir = testdir
         if config ~= "build" then
-          local testdir = testdir .. "-" .. config
+          testdir = testdir .. "-" .. config
         end
         for _,i in ipairs(filelist(testdir,"*" .. os_diffext)) do
           print("  - " .. testdir .. "/" .. i)
